Upgrade to Java 21 (#693)